gcc/testsuite/rust/rustc/ui/static/issue-24446.rs
fn main() {
    static foo: dyn Fn() -> u32 = || -> u32 {
// { dg-error ".E0308." "" { target *-*-* } .-1 }
// { dg-error ".E0308." "" { target *-*-* } .-2 }
// { dg-error ".E0308." "" { target *-*-* } .-3 }
// { dg-error ".E0308." "" { target *-*-* } .-4 }
        0
    };
}

